corrected the data

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <tr>
         <td data-label="First Name">Alfreds</td>
         <td data-label="Last Name">Futterkiste</td>
-        <td data-label="Email">futterkiste@gmail.com</td>
+        <td data-label="Email">futter@gmail.com</td>
         <td data-label="Username">Alffutt</td>
       </tr>
       <tr>
@@ -51,14 +51,14 @@
       <tr>
         <td data-label="First Name">Laughing</td>
         <td data-label="Last Name">Bacchus</td>
-        <td data-label="Email">laughing@gmail.com</td>
+        <td data-label="Email">laugh@gmail.com</td>
         <td data-label="Username">laughter</td>
       </tr>
       
       <tr>
         <td data-label="First Name">Riuniti</td>
         <td data-label="Last Name">Magazzini</td>
-        <td data-label="Email">riuniti@gmail.com</td>
+        <td data-label="Email">riunit@gmail.com</td>
         <td data-label="Username">riuniti/td>
       </tr>
   
